--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,29 @@
 .project-info-trigger {
-	color:red;
+    color:red;
 }
 
 .popover-content {
-	max-height:200px;
-	overflow:hidden;
-	text-overflow: ellipsis;
+    max-height:200px;
+    overflow:hidden;
+    text-overflow: ellipsis;
+}
+
+
+.popover-content-container:after
+{ 
+    content:"";
+    position: absolute;
+    bottom: 0; left: 0;
+    width: 90%;
+    text-align: center;
+    margin: 0px 0px 8px 10px;
+    padding: 50px 0; 
+
+    background: -moz-linear-gradient(top, rgba(255,255,255,0) 0%, rgba(255,255,255,1) 97%, rgba(255,255,255,1) 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,255,255,0)), color-stop(97%,rgba(255,255,255,1)), color-stop(100%,rgba(255,255,255,1))); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 97%,rgba(255,255,255,1) 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 97%,rgba(255,255,255,1) 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 97%,rgba(255,255,255,1) 100%); /* IE10+ */
+    background: linear-gradient(top, rgba(255,255,255,0) 0%,rgba(255,255,255,1) 97%,rgba(255,255,255,1) 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
 }
