--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 }
 
 .popover-content {
-	max-height:200px;
+	max-height:300px;
 	overflow:hidden;
 	text-overflow: ellipsis;
 }
@@ -32,4 +32,22 @@
 .arrow {
 	width:20px;
 	height:20px;
+}
+
+.map {
+	width:280px;
+	height:100px;
+	margin-top:-10px;
+	margin-left:-10px;
+	padding:0;
+}
+
+.popover-content {
+	border-top:1px solid #999;
+	padding:0 !important;
+}
+
+.popover-content-container {
+	border-top:1px solid #999;
+	padding:10px;
 }
